mobile and overflow fix

--- a/app/assets/stylesheets/common/d-editor.scss
+++ b/app/assets/stylesheets/common/d-editor.scss
@@ -107,7 +107,7 @@
 .d-editor-plugin {
   display: flex;
   flex-grow: 1;
-  overflow: scroll;
+  overflow: auto;
   background: $secondary;
 }
 
