--- a/app/assets/stylesheets/mobile/compose.scss
+++ b/app/assets/stylesheets/mobile/compose.scss
@@ -7,6 +7,7 @@
 }
 
 #reply-control {
+  z-index: 1002; //d-header is 1001  
     .reply-area {
       padding: 0 5px;
       display: flex;
